--- a/music.html
+++ b/music.html
@@ -143,7 +143,7 @@ $("document").ready(function(){
 <td colspan="5"><hr width="100%" color="" size="3"></td>
 </tr>
 <tr align="center">
-<td colspan="4"><img src="https://wallpaperbrowse.com/media/images/games.png" style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260"><p style="margin: 3px 20px 0px 13px;" align="left">Top music
+<td colspan="4"><img src="http://s0.hulkshare.com/avatar_images/original/1/3/7/137fa28774c1ec6cd0d82e0d8b2d2dbe.jpg?dd=1478526207" style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260"><p style="margin: 3px 20px 0px 13px;" align="left">Top music
 
 <details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
 	<summary>Top 10 interesting music</summary>
