--- a/music.html
+++ b/music.html
@@ -171,11 +171,9 @@ $("document").ready(function(){
 		<source src="" type="audio/mpeg">
 		</audio>
 	</p>
-	<p>
-	<center>
-	<iframe width="560" height="315" src="https://youtu.be/g3Rf5qDuq7M" frameborder="2" allowfullscreen></iframe>
-	</center>
-	</p>
+	<video>
+	<source src="https://youtu.be/g3Rf5qDuq7M">
+	</video>
 </details>  
 </p></td>
 </tr>
