--- a/music.html
+++ b/music.html
@@ -172,7 +172,7 @@ $("document").ready(function(){
 		</audio>
 	</p>
 	<video>
-	<source src="https://youtu.be/g3Rf5qDuq7M">
+	<source src="https://www.youtube.com/watch?v=g3Rf5qDuq7M">
 	</video>
 </details>  
 </p></td>
