--- a/music.html
+++ b/music.html
@@ -171,7 +171,7 @@ $("document").ready(function(){
 		<source src="" type="audio/mpeg">
 		</audio>
 	</p>
-	<video src="https://www.youtube.com/watch?v=g3Rf5qDuq7M" controls></video>
+	<video src="https://youtu.be/g3Rf5qDuq7M" controls></video>
 </details>  
 </p></td>
 </tr>
