--- a/music.html
+++ b/music.html
@@ -171,7 +171,7 @@ $("document").ready(function(){
 		<source src="" type="audio/mpeg">
 		</audio>
 	</p>
-	<video src="https://youtu.be/g3Rf5qDuq7M" controls></video>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/g3Rf5qDuq7M" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </details>  
 </p></td>
 </tr>
