--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@ $("document").ready(function(){
 <?include "showtable.php";?>
 </table>
 
-<div id='dialog4' title='Замовлення' style='display:none;'><?include "showtovar.php"?></div>
+<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=sashavua.github.io&digit=style/plain/18/&reloads=0" alt="" title="" border="0"></a><br /><a href="http://myavreceiver.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">compare avr</a>
 
+<div id='dialog4' title='Замовлення' style='display:none;'><?include "showtovar.php"?></div>
 </body>
 </html>
