--- a/music.html
+++ b/music.html
@@ -174,18 +174,20 @@ $("document").ready(function(){
 	</p>
 	<iframe width="460" height="215" src="https://www.youtube.com/embed/g3Rf5qDuq7M" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 	<iframe width="460" height="215" src="https://www.youtube.com/embed/wT3RhIJZu4k" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+	
+
+</details>  
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
 	<summary>Shape Of You</summary>
-	<p><audio controls>
+		<p><audio controls>
 		<source src="" type="audio/mpeg">
 		</audio>
-	<br>"Hopeful" is the debut single by British pop duo Bars and Melody. It is based on the lyrics and music of Twista's 2005 song "Hope", featuring Faith Evans. The song was released on 25 July 2014 through Syco Music. It debuted at number 5 on the UK Singles Chart, with sales of 40,191.
-	<br>Bars and Melody first performed the song when they auditioned for the eighth series of Britain's Got Talent in February 2014. They received judge Simon Cowell's golden buzzer and went straight through to the live shows. On 7 June, the duo finished in third place during the live final.
-	<br>On 15 June, it was announced that Bars and Melody had signed to Cowell's record label Syco Music. It was later revealed that they would release their version of "Hope" (retitled "Hopeful") as their debut single on 27 July.
-	<br>To promote the song, they appeared on television shows such as This Morning and Good Morning Britain as well as The Official Chart on BBC Radio 1 the day the song debuted.
-	<br>The music video was released to YouTube on 7 July 2014. It has since amassed over 160 million views over several videos.
-		
+	<br>	
 	</p>
-</details>  
+			<iframe width="460" height="215" src="https://www.youtube.com/embed/z148rZWFzKM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+</details>
 </p></td>
 </tr>
 
