--- a/music.html
+++ b/music.html
@@ -190,6 +190,120 @@ $("document").ready(function(){
 
 
 </details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Keep Smiling</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>	
+	</p>
+			<iframe width="460" height="215" src="https://www.youtube.com/embed/s635Rdh1iA0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Stay Strong</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>Anyone can be a Super Hero
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/BiU5FW6HmJI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Thousand Years</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>Taken from the new album Generation Z out September 1st
+	<br>Video by Sitcom Soldiers
+	<br>Produced by Tadic / Finley to produced by Finley / Tadic / Romesh
+	<br>Written by Richardson / Benik / Devries / Lenehan
+	<br>Produced by Tadic / Finley
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/aLibWXsYqO0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Alan Walker - Faded (Cover)</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>As told BAM: " This is such an amazing track we had to get into the studio to do a cover! Big love to Alan Walker!
+Huge thanks to RAWR Messenger for sponsoring this video! "	
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/wz4azfQg9qk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Lukas Graham - 7 Years (Cover)</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>As say BAM" Check out our cover of Lukas Graham - 7 Years! We've been getting this song requested loads from everyone and its such a tune! So we jumped in the studio this week to do a cover for you :)
+	<br>Huge love to Romesh Dodangoda @ Long Wave for letting us use his studio!"
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/SoTpKBRaBHc" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Sam Smith - Too Good At Goodbyes ( COVER )</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>As told BAM: "We loved covering this emotional Sam Smith song too good at goodbyes, we hope you love it too!  "
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/ihDtgsRBllM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Post Malone feat. 21 savage - Rockstar ( Cover )</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/CZU549IvQe8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Kygo - It Ain't Me ft. Selena Gomez ( Cover )</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/dmN74qs4aO8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>I Won't Let You Go (OFFICIAL VIDEO)</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>As told BAM: "Here is the official music video for our new single I Won't Let You Go  "
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/3YWbOPdAlhk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+			
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Dua Lipa - New Rules ( COVER )</summary>
+		<p><audio controls>
+		<source src="" type="audio/mpeg">
+		</audio>
+	<br>Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
+	</p>
+			<iframe width="854" height="480" src="https://www.youtube.com/embed/zt8A7I1YTw8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+
+</details>
+<details  style="margin: 5px 20px 5px 5px;" align="left" height="175" width="260">
+	<summary>Coming soon</summary>
+		
+</details>
 </td>
 </tr>
 
