--- a/music.html
+++ b/music.html
@@ -119,7 +119,7 @@ $("document").ready(function(){
 </script>-->
 <table width="70%" align="center" border="0" background="">
 <tr>
-<td rowspan="2" width="25%" ><img src=""></td>
+<td rowspan="2" width="25%" ></td>
 <td width="25%" align="center" class="NAME"><b><i><u>Future VS Man</u></i></b></td>
 <td  rowspan="2" colspan="2" width="50%">
 <p style="margin: 5px 20px 5px 20px;">Hello.If you got on this site it is means that you are interested in something with this information .I hope what help you or was interesting . Thank you review my site .</p>
