--- a/games.html
+++ b/games.html
@@ -116,7 +116,8 @@ $("document").ready(function(){
 	})
 	
 })
-</script>-->
+</script>
+-->
 <table width="70%" align="center" border="0" background="">
 <tr>
 <td rowspan="2" width="25%" ></td>
