--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ $("document").ready(function(){
 </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <div class="menu" align="bottom">
-<img align="bottom" src=".jpg">f
+<img align="right" height='45' src="social.jpg">f
 </div>
 </div>
 </body>
