--- a/music.html
+++ b/music.html
@@ -67,23 +67,27 @@
 	
 
 </details>  
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Shape Of You</summary>
 Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/z148rZWFzKM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Keep Smiling</summary>
 	
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/s635Rdh1iA0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Stay Strong</summary>
 	Anyone can be a Super Hero
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/BiU5FW6HmJI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Thousand Years</summary>	
 Taken from the new album Generation Z out September 1st
@@ -94,6 +98,7 @@ Taken from the new album Generation Z out September 1st
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/aLibWXsYqO0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Alan Walker - Faded (Cover)</summary>
 As told BAM: " This is such an amazing track we had to get into the studio to do a cover! Big love to Alan Walker!
@@ -101,6 +106,7 @@ Huge thanks to RAWR Messenger for sponsoring this video! "
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/wz4azfQg9qk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Lukas Graham - 7 Years (Cover)</summary>
 As say BAM" Check out our cover of Lukas Graham - 7 Years! We've been getting this song requested loads from everyone and its such a tune! So we jumped in the studio this week to do a cover for you :)
@@ -108,6 +114,7 @@ As say BAM" Check out our cover of Lukas Graham - 7 Years! We've been getting th
 			<iframe align="right" width="49%" height="25%" src="https://www.youtube.com/embed/SoTpKBRaBHc" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Sam Smith - Too Good At Goodbyes ( COVER )</summary>
 As told BAM: "We loved covering this emotional Sam Smith song too good at goodbyes, we hope you love it too!  "
@@ -115,11 +122,13 @@ As told BAM: "We loved covering this emotional Sam Smith song too good at goodby
 
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Post Malone feat. 21 savage - Rockstar ( Cover )</summary>
 Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
 			<iframe align='right' width="49%" height="25%" src="https://www.youtube.com/embed/CZU549IvQe8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Kygo - It Ain't Me ft. Selena Gomez ( Cover )</summary>
 Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
@@ -127,6 +136,7 @@ Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape O
 
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>I Won't Let You Go (OFFICIAL VIDEO)</summary>
 As told BAM: "Here is the official music video for our new single I Won't Let You Go  "
@@ -134,6 +144,7 @@ As told BAM: "Here is the official music video for our new single I Won't Let Yo
 			<iframe align='right' width="49%" height="25%" src="https://www.youtube.com/embed/3YWbOPdAlhk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 			
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Dua Lipa - New Rules ( COVER )</summary>
 Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape Of You as it's such an awesome track..	
@@ -141,6 +152,7 @@ Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape O
 
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c60000; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Coming soon</summary>
 		
@@ -162,12 +174,14 @@ Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape O
 	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/LK9mJh4qVj4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c28273; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Taylor Swift- Bad Blood (Johnny Orlando Cover)</summary>
 	
 	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/jyqsqzhMG0E" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
 </details>
+<hr>
 <details  style="margin: 3px 0px 0px 5px; color:#c28273; font-variant:small-caps; font-weight:bold;" align="left">
 	<summary>Shawn Mendes- Stitches (Johnny Orlando Cover)</summary>
 	
@@ -184,8 +198,85 @@ Hey everyone!On January 9, they do new an acoustic cover of Ed Sheeran - Shape O
 
 </p>
 </div>
+<div class="text_music">
+<img src="http://akns-images.eonline.com/eol_images/Entire_Site/20161119/rs_600x600-161219125308-600.Camila-Cabello.3.ms.121916.jpg" style="margin:-10px 0px 0px 3px;" align="left" height="40%" width="35%">
+<h4>Camila Cabello
+<hr>
+<details  style="margin: 3px 0px 0px 5px; color:#1c324a; font-variant:small-caps; font-weight:bold;" align="left">
+	<summary>Camila Cabello - Havana ft. Young Thug</summary>
+	
+	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/BQ0mxQXmLsk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</details>
+<hr>
+	<p    style="margin: 3px 0px 0px 5px; color:#1c324a; font-variant:small-caps; font-weight:bold;" align="left">
+	Camila Cabello auditioned for The X Factor in Greensboro, North Carolina. She auditioned with Aretha Franklin's "Respect", however, her audition was not aired because the TV show did not get the rights for the song. After elimination during the "bootcamp" portion of the process in Miami, Florida, Cabello was called back to the stage along with Ally Brooke, Normani Kordei, Lauren Jauregui, and Dinah Jane to form the girl group that would later become known as Fifth Harmony. After finishing in third place on the show they signed a joint deal with Syco Music, owned by Simon Cowell, and Epic Records, L.A. Reid's record label.
+<br>On December 18, 2016, the group announced Cabello's departure, with both parts explaining different circumstances of the exit. She appeared in a previously taped performance with the group on Dick Clark's New Year's Rockin' Eve. Writing about Cabello's time on the group, a Billboard journalist noted it is "rather uncommon for someone to stand out in a collective as much as Cabello has over the past years," also mentioning how her activity on social media and close interaction with her audience helped her potential as a breakout act.
+<br>New writing and recording sessions for her album were influenced by the success of her single "Havana", which postponed its original release date. The single has reached number 1 in Australia, Ireland and the United Kingdom, as well as number 2 in the United States. Titled Camila, her debut album will be released on January 12, 2018.
+
+</p>
+</div>
+<div class="text_music">
+<img src="https://i.pinimg.com/736x/29/50/0a/29500a968e5d18a485e94d720f6e3433--black-star-egor-kreed.jpg" style="margin:-10px 0px 0px 3px;" align="left" height="40%" width="35%">
+<h4>Egor Kreed
+<hr>
+<details  style="margin: 3px 0px 0px 5px; color:#c9a834; font-variant:small-caps; font-weight:bold;" align="left">
+	<summary>Egor Kreed - Alarm clock</summary>
+	
+	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/UwxTUXB8peI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<hr>
+	<p    style="margin: 3px 0px 0px 5px; color:#c9a834; font-variant:small-caps; font-weight:bold;" align="left">
+	In 2014 he released the single "The most", which won the first lines of charts and music charts [5] . As of December 17, 2017 in the video clip for the song a little more than 120 million views on the YouTube [6] .
+	<br>April 2, 2015 released the first studio album  - "Bachelor". A new hit by Egor from this album was the song "The Bride". July 25, 2015 spoke at the festival Europa Plus LIVE 2015 , which was held in Moscow, in the sports complex " Luzhniki " [7] .
+	<br>December 31, 2015 in the program " New Year's night at the first " sang the song "The most".
+	<br>January 1, 2016 in "New Year's Blue Light 2016" sang remake of the songs "The most" and "Hope" in conjunction with Iosif Kobzon .
+	<br>On March 26, 2016 Creed was not allowed to enter the territory of Ukraine [8] . The reason for refusing entry could be that the singer started selling tickets for his concerts in Crimea, which were to be held on April 22 and May 1. In 2017 he starred in advertising "Garnier".
+
+</p>
+</div>
+<div class="text_music">
+<img src="https://kuda29.ru/content/galery/image/events/16604/u5ycsrN.jpg" style="margin:-10px 0px 0px 3px;" align="left" height="45%" width="40%">
+<h4>Eldjey
+<hr>
+<details  style="margin: 3px 0px 0px 5px; color:#483115; font-variant:small-caps; font-weight:bold;" align="left">
+	<summary>Eljee - Torn jeans</summary>
+	
+	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/AS_uBieKtmg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<hr>
+	<p    style="margin: 3px 0px 0px 5px; color:#483115; font-variant:small-caps; font-weight:bold;" align="left">
+	All-Russian fame came to Elgeya in 2017, when the song "Pink Wine", recorded together with Feduk , became one of the main Russian-language hits of the year [6] . The clip for the song was released on November 14, 2017 and caused a conflict between the performers who did not understand the names in the video's title: the video was originally published by Feduk and his name was the first in the list of performers. Two days after the publication, the video on Youtube was blocked, typing up to this point two million views. A day later the video was unlocked, but now the first in the list of performers was Aljey [7] . Later, Eljey stated that the reason for the blockage was not the order of the names of the performers, but the claims for color correction in the video clip [8] . At the height of the conflictblogger Eldar Jarakhov sharply criticized the management of Elgeya on Twitter , and Ilya Prusikin , the frontman of Little Big, said that Aljey gave out a song in which he originally participated as a guest performer for his [7] .
+	<br>The track "Pink Wine" became the most popular in 2017 according to users of the social network " VKontakte " [9] . For a year the song was auditioned more than 200 million times
+
+</p>
+</div>
+<div class="text_music">
+<img src="https://s3.amazonaws.com/bit-photos/large/8395898.jpeg" style="margin:-10px 0px 0px 3px;" align="left" height="45%" width="40%">
+<h4>Mario Novembre
+<hr>
+<details  style="margin: 3px 0px 0px 5px; color:#d22a37; font-variant:small-caps; font-weight:bold;" align="left">
+	<summary>Mario Novembre - Friends On The Internet</summary>
+	
+	<iframe width="49%" height="25%" src="https://www.youtube.com/embed/C7v_VrzayTY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+</details>
+<hr>
+	<p    style="margin: 3px 0px 0px 5px; color:#d22a37; font-variant:small-caps; font-weight:bold;" align="left">
+	Reality singing personality who competed on The Voice Kids Germany in 2015. He went to school in Heimsheim, Germany. He broadcasts live on the network YouNow where he sings for his loyal viewers. He resides near the city of Pforzheim in Germany. He, Mike Singer, Keanrah and Julian Martel did a One Direction cover together.
+
+</p>
+</div>
+
+
+
+
+
+
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <div class="menu" align="bottom">
 <img align="right" height='45' src="social.jpg">f
