--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <a href="games.html" class="action"><img align='left' width='45%' height='50%' src="foto/games.jpg"><p style="margin: 3px 20px 0px 13px;" align="left">This article about games. Here you can find out bugs, cheats , interesting information and altho. Sometimes here will be tops.Here you can read and soon watching on such games as GTA 1-5, Tanki online, World of ship</p></a>
 </div>
 <div class="text">
-<a href="create.html" class="action"><img width='45%' height='50%' src="foto/create.jpg"  align='left'><p style="margin: 3px 20px 0px 13px;" align="left">This article about create site. Here you can find out about html, css ,java, much different altho.</p></a>
+<a href="createsite.html" class="action"><img width='45%' height='50%' src="foto/create.jpg"  align='left'><p style="margin: 3px 20px 0px 13px;" align="left">This article about create site. Here you can find out about html, css ,java, much different altho.</p></a>
 </div >
 <div class="text">
 <a href="foto.html" class="action"><img align='left' width='55%' height='50%' src="foto/foto.jpg"><p style="margin: 3px 20px 0px 13px;" align="left">This article about foto.</p></a>
 </div>
 <div class="text">
-<a href="book.html" class="action"><img  align='left' width='45%' height='50%' src="foto/book.jpg"><p style="margin: 3px 20px 0px 13px;" align="left">This article about book.</p></a>
+<a href="bookvsfilm.html" class="action"><img  align='left' width='45%' height='50%' src="foto/book.jpg"><p style="margin: 3px 20px 0px 13px;" align="left">This article about book.</p></a>
 </div>
 <div class="text">
 <a href="blog.html" class="action"><img width='80%' height='50%' src="foto/blog.gif"><p style="margin: 3px 20px 0px 13px;" align="left">Information will is soon fill</p></a>
