--- a/bookvsfilm.html
+++ b/bookvsfilm.html
@@ -34,16 +34,16 @@ The fantastic thriller "The Running of a Labyrinth: Drugs of Death" by James Das
 <td colspan='3'><ul class="menu1">
     <li class='menu2'><a href=#>Films</a>
         <ul class="submenu">
-            <li><a href=#>News</a></li>
+            <li><a href='#Maximum_Ride'>Maximum Ride</a></li>
             <li><a href=#>Interistign</a></li>
-            <li><a href=#>2017 yars</a></li>
+            <li><a href=#>2017 years</a></li>
         </ul>
     </li>
     <li class='menu2'><a href=#>Book</a>
         <ul class="submenu">
             <li><a href=#>News</a></li>
             <li><a href=#>Interistign</a></li>
-            <li><a href=#>2017 yars</a></li>
+            <li><a href=#>2017 years</a></li>
         </ul>
     </li>
     <li class='menu2'><a href=#>Novelty</a>
@@ -85,7 +85,7 @@ The fantastic thriller "The Running of a Labyrinth: Drugs of Death" by James Das
 </td>
 </tr>
 <tr>
-<td colspan='3'>
+<td class='menu7' colspan='3'><a name='Maximum_Ride'></a>
 <img align='left' height='500' src='https://images-na.ssl-images-amazon.com/images/M/MV5BMjQyMjEzMjU3M15BMl5BanBnXkFtZTgwMDExNTU1OTE@._V1_UY1200_CR89,0,630,1200_AL_.jpg'>
 <b>Maximum Ride</b> is a series of young adult fantasy novels by the author James Patterson, with a manga adaptation published by Yen Press.<br>
 Plot<br>
@@ -113,7 +113,6 @@ The Flock must save the world from the Itexicon Corporation (the company behind 
 </td>
 </tr>
 <tr>
-<td></td>
 <td></td>
 </tr>
 </table>
