--- a/creatsite.html
+++ b/creatsite.html
@@ -95,21 +95,7 @@
 </dl>
 </td>
 <td class='menu7' width='87%'>
-<dl>
-	<dt>Characters:</dt>
-		<dd>Gazzy</dd>
-		<dd>Ari Batchelder</dd>
-		<dd> Nudge</dd>
-		<dd> Jeb Batchelder</dd>
-		<dd>Maximum Ride</dd>
-		<dd>Dr.Valencia Martinez</dd>
-		<dd>Fang</dd>
-		<dd>Total</dd>
-		<dd>Mr.Chu</dd>
-		<dd>Angel</dd>
-		<dd>Iggy</dd>
-		<dd>Dylan</dd>
-</dl>
+<img>
 </td>
 </tr>
 </table>
