--- a/games.html
+++ b/games.html
@@ -14,7 +14,38 @@
 <a align="right" href=".html"></a>
 <a href="info.html" class="action">Information</a>
 </div>
-
+<table width='100%' border='1'>
+<tr>
+	<td>
+	<ul class="menu1">
+	<li class='menu2'><a href=#></a>
+        <ul class="submenu">
+            <li><a href='#'></a></li>
+            <li><a href=#></a></li>
+            <li><a href=#></a></li>
+        </ul>
+    </li>
+    <li class='menu2'><a href=#></a>
+        <ul class="submenu">
+            <li><a href=#></a></li>
+            <li><a href=#></a></li>
+            <li><a href=#></a></li>
+        </ul>
+    </li>
+    <li class='menu2'><a href=#></a>
+        <ul class="submenu">
+            <li><a href=#> </a></li>
+            <li><a href=#> </a></li>
+            <li><a href=#> </a></li>
+        </ul>
+    </li>
+	</ul>
+	</td>
+	<td>
+	
+	</td>
+</tr>
+</table>
 <div class="menu" align="bottom">
 <img align="right" height='45' src="social.jpg">f
 </div>
